Bug 144166 - Pixel (or pixels) missing in the Calc Formula Bar
Summary: Pixel (or pixels) missing in the Calc Formula Bar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Windows (All)
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.1 target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-weld-InputBar
  Show dependency treegraph
 
Reported: 2021-08-29 21:08 UTC by fml2
Modified: 2022-06-09 01:42 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Missing pixel at the lower left corner (3.48 KB, image/png)
2021-08-29 21:08 UTC, fml2
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fml2 2021-08-29 21:08:01 UTC
Description:
The inbut box where formula is edited has a thin border. The border has no pixels at the corners. Is it the intention?

The lowel left corder even lacks TWO pixels! See the attachments.

Steps to Reproduce:
Start Calc with an empty sheet, look at the formula input box.

Actual Results:
Pixels missing.

Expected Results:
Border is complete.


Reproducible: Always


User Profile Reset: No



Additional Info:
No other information needed.
Comment 1 fml2 2021-08-29 21:08:43 UTC
Created attachment 174615 [details]
Missing pixel at the lower left corner
Comment 2 Deep17 2021-09-27 15:54:12 UTC
Thank you for reporting the bug. I can confirm that the bug is present in

Version: 7.2.1.2 (x64) / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 8; OS: Windows 10.0 Build 17763; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

and

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a78190da867864485b5d0a91238616bd4090b5b5
CPU threads: 8; OS: Windows 10.0 Build 17763; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 3 Buovjaga 2021-10-04 14:56:22 UTC
al.le: does it make a difference, if you temporarily deactivate this: Tools - Options - LibreOffice - View - Use Skia for all rendering ?
Comment 4 fml2 2021-10-04 15:43:10 UTC
If I deactivate the optoin then it gets a little bit better. By that I mean that the lower left corner only lacks one pixel (instead of two).

But all other corners still lack one pixel.

I could not imagine that it's that hard to draw a rectangle :-)
Comment 5 Buovjaga 2021-10-04 16:35:32 UTC
(In reply to al.le from comment #4)
> If I deactivate the optoin then it gets a little bit better. By that I mean
> that the lower left corner only lacks one pixel (instead of two).
> 
> But all other corners still lack one pixel.
> 
> I could not imagine that it's that hard to draw a rectangle :-)

Ah, the one pixel is intentional as it tries to convey a slightly rounded rectangle. On Linux it shows it with two extra shades of gray to make it seem smoother.
Comment 6 V Stuart Foote 2021-10-04 16:53:03 UTC
Hadn't noticed it before, but the UI is being drawn without closing corners of the Formula Bar with all rendering modes, Skia or Default GDI.

Not a Skia related issue.
Comment 7 Buovjaga 2021-10-04 16:58:47 UTC
(In reply to V Stuart Foote from comment #6)
> Hadn't noticed it before, but the UI is being drawn without closing corners
> of the Formula Bar with all rendering modes, Skia or Default GDI.
> 
> Not a Skia related issue.

But how is it an issue?
Comment 8 V Stuart Foote 2021-10-04 16:59:18 UTC
On at least 7.2 and trunk/7.3 Windows builds the non-closed corners for the Formula Bar happen in its collapsed mode, or in its multi-line input mode. Regardless of rendering mode.

checked a handy 4.4 build, not present so guess a regression and this can be bibisected.
Comment 9 V Stuart Foote 2021-10-04 17:14:55 UTC
Checked Writer's Formula Bar (inputwin.cxx) and its corners draw correctly for 7.2 and trunk/7.3 builds.

So I'd suspect it was Weld follow-up work to the sc inputwin.cxx--perhaps https://gerrit.libreoffice.org/c/core/+/115243

but a bibisect is in order.
Comment 10 fml2 2021-10-04 18:15:40 UTC
> Ah, the one pixel is intentional as it tries to convey a slightly rounded rectangle.

All other GUI elements (dropdown boxes, the area input box etc.) are strictly rectangular, so I think there is no need for a "rounded" rectangle here. It only confuses.
Comment 11 Deep17 2022-01-27 03:15:35 UTC
Regression introduced by:
https://git.libreoffice.org/core/commit/e087e25f05e689091cbf1c4f91b6e93878ac17ec

commit e087e25f05e689091cbf1c4f91b6e93878ac17ec	[log]
author	Caolán McNamara <caolanm@redhat.com>	Mon Oct 05 14:19:05 2020 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Fri Oct 16 12:54:14 2020 +0200
tree 8adb7ccbfa34e45e549a17bd9ee0a85067db1671
parent d6b7cc3f7c07b98c90194e8b33cf44b94804b525 [diff]

Bisected with:bibisect-win64-7.1
Adding Cc: to 	Caolán McNamara
Comment 12 Caolán McNamara 2022-01-27 10:33:16 UTC
The same is true for format, cells, numbers and the border around the preview widget there too, same for the preview widget in the "font effects" tab too. So the existence of a rounded border around some elements, with the "missing pixel effect" isn't new, what the bisect shows is the reuse of that border frame widget for the formula bar which itself is deliberate.
Comment 13 Commit Notification 2022-01-27 12:11:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/8b58fb610e08b4d1ec11440e24207eaba345fe66

tdf#144166 use border drawing style for VclScrolledWindow

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2022-01-27 17:25:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40456ff3d26c7edc2eb49c14077b2cbfa492af3c

tdf#144166 use border drawing style for VclScrolledWindow

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.