tdf#144166 use border drawing style for VclScrolledWindow

to avoid rounded rectangles on Windows.

Change-Id: I29b9631ec0f3d125cbf103b0c12580a41f9b9264